Creation de l'inscription utilisateur [closes #2]
