# api/internal/models/user.go
@@ -1,0 +1,11 @@
+package models
+
+import "time"
+
+type User struct {
+	ID        int64     `json:"id"`
+	Username  string    `json:"username"`
+	Password  string    `json:"-"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+}
