# api/internal/router/router.go
@@ -4,20 +4,18 @@ import (
 	"net/http"
 	"github.com/go-chi/chi/v5"
 	httpSwagger "github.com/swaggo/http-swagger"
+	AuthSignup "gowebgame/features/auth/signup"
 )
 
 func InitRoute() http.Handler {
 	r := chi.NewRouter()
 
-	// @Summary Ping
-	// @Description Route de test
-	// @Success 200 {object} map[string]string
-	// @Router /ping [get]
 	r.Get("/", WelcomeHandler)
+
+	r.Post("/auth/signup", AuthSignup.SignupHandler())
 
 	// Swagger
 	r.Get("/swagger/*", httpSwagger.WrapHandler)
-	// r.Get("/swagger/*", http.StripPrefix("/swagger/", http.FileServer(http.Dir("./docs"))).ServeHTTP)
 
 	return r
 }
